--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-  <title>app_title</title>
+  <title>Title</title>
 </head>
 <body>
   <div id="app"></div>
